Changed nav to fixed with z-index of 1

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,7 @@
 
 #nav-bar  {
+  z-index: 1;
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
